# AI-Terminal

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/skills/: bug-tracker.md
.github/scripts/: generate-latest-json.mjs
.github/workflows/: release-rc.yml  release.yml  windows-package.yml
dist-page/: index.html
docs/: design-notes.md  功能清单.md  问题追踪清单.md
scripts/: gen-icon.ps1  gen-png.ps1
src/: api.ts  main.ts  platform.ts
src-tauri/: Cargo.toml  Info.plist  build_check.bat  cargo.bat  run_rfd.bat  tauri.conf.json  test_exec.bat
src-tauri/.cargo/: config.toml
src-tauri/C:\cargo-target\ai-terminal/: .rustc_info.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  notification.rs  output_parser.rs  pty_manager.rs
src/components/: app-state.ts  sidebar.ts  tab-bar.ts  terminal-view.ts  themes.ts  updater.ts
src/styles/: main.css
