[package]
name = "ai-terminal"
version = "0.3.0"
edition = "2021"
description = "Cross-platform AI terminal manager"
authors = ["yvo-zym"]
license = "GPL-3.0-or-later"
repository = "https://github.com/yvo-zym/AI-Terminal"

[lib]
name = "ai_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-terminal"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
strip-ansi-escapes = "0.2"
base64 = "0.22"
arboard = "3"
png = "0.17"
encoding_rs = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
